@@ -1,5 +1,8 @@
 2004-05-20  Matthew Mueller  <donut@dakotacom.net>
 
+	* arch/ogl/ogl.c, include/gr.h, main/inferno.c: add -renderstats
+	command-line arg to activate RENDERSTATS (d1x r1.36, r1.15, r1.33)
+
 	* arch/ogl/ogl.c: fix last commit (d1x r1.35)
 
 	* arch/ogl/ogl.c: add RENDERSTATS counter for number of textures
